test/extern/records/OpaqueStructUseError.good
OpaqueStructUseError.chpl:9: error: using an incomplete type 'mydata'
